# dumbrouter

./: .gitignore  Cargo.toml  Dockerfile  README.md  bob_tag.txt
dummyserver/: Caddyfile  Dockerfile  entrypoint.sh
scripts/: build.sh  make_dummy_server.sh  make_echo_server.sh  run.sh
src/: main.rs
